--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pug": "^2.0.4",
     "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1",
+    "sequelize-heroku": "^2.1.5",
     "serve-favicon": "^2.5.0",
     "session-file-store": "^1.4.0",
     "socket.io": "^2.3.0"
