--- a/config/config.json
+++ b/config/config.json
@@ -21,6 +21,7 @@
     "database": "jsi7duxge8prbsvx",
     "host": "pqxt96p7ysz6rn1f.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql",
+    "timezone": "+09:00",
     "logging":false
   }
 }
